fix: update layout visibility properties for stacked and compact layouts

--- a/src/components/film_card.module.css
+++ b/src/components/film_card.module.css
@@ -63,11 +63,11 @@
 }
 
 .stacked_layout {
-    visibility: visible;
+    display: flex;
 }
 
 .compact_layout {
-    visibility: collapse;
+    display: none;
 }
 
 @media screen and (max-width: 850px) {
@@ -100,11 +100,11 @@
     }
 
     .stacked_layout {
-        visibility: collapse;
+        display: none;
     }
 
     .compact_layout {
-        visibility: visible;
+        display: flex;
     }
 
     .movie_info {
